tests/src/frontend/typechecking/invalid/this_type_inherit_1.sk
base class MyList<+T: frozen> {
  children =
  | MyNil()
  | MyCons(T, MyList<T>)

  // retval incompatible with ret type in the context of MyCons
  fun ex1(): this {
    MyNil()
  }
}

fun main(): void {
  print_string("Fail\n")
}
